--- a/search_engine/app/frontend/index.html
+++ b/search_engine/app/frontend/index.html
@@ -162,6 +162,16 @@
 
             <div class="add-doc-result" id="addDocResult" style="display: none;"></div>
         </div>
+
+        <!-- Document Modal -->
+        <div class="modal" id="documentModal">
+            <div class="modal-content">
+                <span class="close-modal" id="closeModal">&times;</span>
+                <div class="modal-body" id="modalBody">
+                    <div class="modal-loading">Loading...</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
